--- a/examples/demo/docker-compose.yaml
+++ b/examples/demo/docker-compose.yaml
@@ -38,6 +38,7 @@ services:
     command: ["--config=/etc/otel-agent-config.yaml", "${OTELCOL_ARGS}"]
     volumes:
       - ./otel-agent-config.yaml:/etc/otel-agent-config.yaml
+      - ./data/:/home/data/
     ports:
       - "8887:8888"   # Prometheus metrics exposed by the agent
       - "14250"       # Jaeger grpc receiver
@@ -68,7 +69,7 @@ services:
 
   metrics-load-generator:
     build:
-      dockerfile: $PWD/app/Dockerfile
+      dockerfile: Dockerfile
       context: ./app
     environment:
       - OTEL_AGENT_ENDPOINT=otel-agent:4317
