hipster shop topology for testing

--- a/examples/demo/.env
+++ b/examples/demo/.env
@@ -1,2 +1,3 @@
-OTELCOL_IMG=otel/opentelemetry-collector-dev:latest
+#OTELCOL_IMG=otel/opentelemetry-collector-dev:latest
+OTELCOL_IMG=otel:s247local
 OTELCOL_ARGS=
